# infrasim

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.terraform  Makefile  README.md  alpine.tf  build-alpine.sh  build.sh  k8s-build-job.yaml
.github/workflows/: README.md  build-alpine-profiles.yml  build-alpine-variants.yml  build-images.yml  build.yml  image-snapshots.yml  release.yml  snapshots.yml  tests.yml
ci/: bundle_qcow2.sh
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: client.rs  lib.rs  main.rs  output.rs
crates/cli/src/commands/: artifact.rs  attestation.rs  benchmark.rs  console.rs  control.rs  git.rs  mod.rs  network.rs  pipeline.rs  sdn.rs  snapshot.rs  vm.rs  volume.rs  web.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: artifact.rs  attestation.rs  cas.rs  crypto.rs  db.rs  error.rs  lib.rs  pipeline.rs  qmp.rs  traffic_shaper.rs  types.rs
crates/daemon/: Cargo.toml  build.rs
crates/daemon/src/: config.rs  grpc.rs  main.rs  qemu.rs  reconciler.rs  state.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: error.rs  lib.rs  playwright.rs  runner.rs  server.rs  spec.rs  visual.rs
crates/e2e/tests/: artifact_inspect.rs  attestation_tamper.rs  determinism_build.rs  e2e.rs  network_qos.rs  terraform_idempotency.rs
crates/provider/: Cargo.toml  build.rs
crates/provider/src/: client.rs  lib.rs  main.rs  provider.rs  schema.rs  server.rs  state.rs
crates/provider/src/resources/: mod.rs  network.rs  snapshot.rs  vm.rs  volume.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: build_analysis.rs  docker.rs  lib.rs  main.rs  mdm.rs  server.rs  snapshot_browser.rs  static_files.rs  vnc_proxy.rs
crates/web/src/auth/: middleware.rs  mod.rs  oidc.rs  provider.rs  rbac.rs  types.rs  webauthn.rs
crates/web/src/meshnet/: appliance.rs  archive.rs  db.rs  handle.rs  identity.rs  mesh.rs  mod.rs  routes.rs
crates/web/static/: index.html  pipeline-analyzer.html
docs/: ALPINE_ARTIFACT_FORMAT.md  ALPINE_VARIANTS.md  APART_FELLOWSHIP_DOCUMENTATION.md  BUILD_FLOW.txt  BUILD_PIPELINE.md  BUILD_SUMMARY.md  CONTROL_PLANE.md  FEATURE_OVERLAYS.md  IMAGE_PROVENANCE.md  ISVM.md  LLM_COMPRESSED.md  LLM_CONTEXT.md  PROVENANCE_WEB.md  README_MESHNET_MVP.md  RFC-TESTS.md  SECURITY_CONSIDERATIONS.md  TEST_CHANGES.md  UI_DEV.md  WEB_AUTH.md  WEB_WORKFLOW.md  api-reference.md  architecture.md  macos-m2-setup.md  project-summary.md  web-architecture.md
examples/: deploy.sh
examples/terraform/: README.md  main.tf  outputs.tf  sdn-overlay.tf  variables.tf
examples/terraform/alpine_runner/: README.md  main.tf
examples/terraform/github-runners/: README.md  main.tf
examples/terraform/github-runners/templates/: runner-cloud-init.yaml
images/alpine/: .gitignore  Dockerfile.builder  MIGRATION.md  Makefile  README.md  boot-test.sh  build-alpine-qcow2.sh  build-profile.sh  build-variant.sh  compose-profile.sh  overlays.yaml
images/alpine/appliances/sidecar-control/: appliance.yaml
images/alpine/appliances/sidecar-control/scripts/: collect-evidence.py  generate-attestation.py  probe-target.sh  run-tests.py
images/alpine/features/base-minimal/: feature.yaml
images/alpine/features/base-minimal/files/: node-descriptor-template.json  verify-signature.sh
images/alpine/features/base-minimal/selftest/: test_base.py
images/alpine/features/control-mtls/: feature.yaml
images/alpine/features/control-mtls/files/: generate-client-cert.sh  mtls-setup.sh  mtls.conf  verify-mtls.sh
images/alpine/features/control-mtls/selftest/: test_mtls.py
images/alpine/features/discovery-bonjour/: feature.yaml
images/alpine/features/discovery-bonjour/files/: avahi-daemon.conf  browse-peers.sh  infrasim.service
images/alpine/features/rendezvous-ipv6/: feature.yaml
images/alpine/features/rendezvous-ipv6/files/: rendezvous-client.py  rendezvous.conf  rendezvousd.openrc  rendezvousd.py
images/alpine/features/rendezvous-ipv6/selftest/: test_rendezvous.py
images/alpine/features/vpn-tailscale/: feature.yaml
images/alpine/features/vpn-tailscale/files/: tailscale-check.sh  tailscale-up.sh  tailscale.conf
images/alpine/features/vpn-wireguard/: feature.yaml
images/alpine/features/vpn-wireguard/files/: apply-peers.sh  wg-down.sh  wg-keygen.sh  wg-up.sh  wg0.conf.template
images/alpine/features/vpn-wireguard/selftest/: test_wireguard.py
images/alpine/features/wan-nat/: feature.yaml
images/alpine/features/wan-nat/files/: nat-detect.sh  nat.conf  stun-probe.sh
images/alpine/features/wan-nat64/: feature.yaml
images/alpine/features/wan-nat64/files/: nat64-setup.sh  tayga.conf
images/alpine/profiles/: dual-vpn-separated.yaml  no-vpn-minimal.yaml  ts-managed.yaml  ts-mtls.yaml  wg-bonjour.yaml  wg-mesh-ipv6.yaml
images/alpine/schemas/: feature.schema.json  profile.schema.json
images/alpine/telemetry/: lorawan-config.json  telemetry-agent.sh
images/alpine/variants/: README.md
images/alpine/variants/dual-vpn/: config.yaml  policy-routing.sh
images/alpine/variants/no-vpn/: config.yaml
images/alpine/variants/tailscale/: config.yaml  tailscale-up.sh
images/alpine/variants/wireguard/: config.yaml  peer-discovery.sh  wg0.conf.template
images/kali-xfce-vnc-aarch64/: Dockerfile  README.md  build.sh  cloud.cfg  entrypoint.sh  vnc-startup.sh
proto/: infrasim.proto  tfplugin6.proto
scripts/: install-isvm.sh  isvm.sh  setup-runner.sh
scripts/runner/: Dockerfile.runner  README.md  docker-compose.yml  entrypoint.sh  start-runner.sh
scripts/runner/vault-config/: vault.hcl
snapshots/: .gitignore
tests/e2e/specs/: dashboard-visual.yaml  login-flow.yaml  smoke.yaml
ui/: package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
ui/apps/console/: index.html  package.json  tsconfig.json  vite.config.ts
ui/apps/console/src/: App.tsx  api-context.tsx  global.css  hooks.ts  main.tsx
ui/apps/console/src/pages/: Admin.tsx  AiBuilder.tsx  ApplianceDetail.tsx  ApplianceFleet.tsx  Appliances.tsx  AuditTimeline.tsx  Config.tsx  CreateApplianceWizard.tsx  Dashboard.tsx  Evidence.tsx  ImageBrowser.tsx  Inventory.tsx  Login.tsx  MeshnetDashboard.tsx  (+9 more)
(+1 files in other folders)
