[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/daemon",
    "crates/web",
    "crates/cli",
    "crates/provider",
    "crates/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["InfraSim Contributors"]
license = "Apache-2.0"
repository = "https://github.com/infrasim/infrasim"
description = "Terraform-compatible QEMU virtualization platform for macOS Apple Silicon"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# gRPC and protobuf
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "5.5"
tempfile = "3.9"
walkdir = "2.4"
notify = "6.1"
nix = { version = "0.28", features = ["signal", "process", "fs"] }

# Network utilities
ipnetwork = "0.20"
socket2 = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
