[package]
name = "infrasim-cli"
version = "0.1.0"
edition = "2021"
authors = ["InfraSim Authors"]
description = "CLI for InfraSim QEMU Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/infrasim/infrasim"

[[bin]]
name = "infrasim"
path = "src/main.rs"

[dependencies]
infrasim-common = { path = "../common" }

# gRPC client
tonic = { workspace = true }
prost = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Terminal UI
colored = "2"
comfy-table = "7"
indicatif = "0.17"

# Encoding
hex = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hostname = "0.4"

# HTTP client for health checks
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[build-dependencies]
tonic-build = { workspace = true }
