[package]
name = "infrasim-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common types and utilities for InfraSim"

[features]
default = []
# Optional network timing context collection.
# When enabled, allows opt-in ICMP timing probes for coarse RTT statistics.
# OFF by default - requires explicit feature enablement AND runtime config.
network-context = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
rusqlite = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
ipnetwork = { workspace = true }

# Artifact inspection
flate2 = "1.0"
tar = "0.4"
zip = "2.2"

[build-dependencies]
tonic-build = { workspace = true }
