[package]
name = "infrasim-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "InfraSim daemon - QEMU orchestration and reconciliation"

[[bin]]
name = "infrasimd"
path = "src/main.rs"

[dependencies]
infrasim-common = { path = "../common" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }
clap = { workspace = true }
toml = "0.8"

[build-dependencies]
tonic-build = { workspace = true }
