[package]
name = "infrasim-e2e"
version = "0.1.0"
edition = "2021"
description = "E2E test runner for InfraSim using Playwright"
license = "Apache-2.0"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process", "sync", "time"] }

# Test framework
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Image comparison for visual regression
image = "0.24"

# Filesystem operations
tempfile = "3"
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI parsing for test runner
clap = { version = "4", features = ["derive"] }

# Process management
nix = { version = "0.27", features = ["signal"] }

# Regex for parsing Playwright output
regex = "1"

# Thiserror for error handling
thiserror = "1"

# sha256 for screenshot hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
# For running as tests
test-case = "3"

# Shared InfraSim primitives used by integration tests
infrasim-common = { path = "../common" }
