[package]
name = "infrasim-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "InfraSim web console with noVNC"

[dependencies]
mime_guess = "2"
infrasim-common = { path = "../common" }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
once_cell = "1"
rusqlite = { workspace = true }
totp-rs = { version = "5", default-features = false, features = ["otpauth"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
data-encoding = "2"

# X.509 / mobileconfig signing
rcgen = { version = "0.13", features = ["pem", "ring"] }
x509-cert = "0.2"
der = { version = "0.7", features = ["alloc", "pem"] }
pem = "3"
cms = "0.2"
const-oid = "0.9"
rsa = { version = "0.9", features = ["sha2"] }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
plist = "1"
dirs = "5"

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
url = "2"

# Async traits
async-trait = "0.1"

# Lightweight regex for size parsing
regex-lite = "0.1"

# URL encoding for path params
urlencoding = "2"

# WireGuard key generation
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Archive generation
tar = "0.4"
flate2 = "1"
zstd = "0.13"

[build-dependencies]
tonic-build = { workspace = true }
